docker-compose changes and dockerfile changes

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,10 @@
 # Use node.js
 FROM node:boron
 
-# Set the working directory to /app
+# Set the working directory to /frontend
 WORKDIR /frontend
 
-# Copy the current directory contents into the container at /backend
+# Copy the current directory contents into the container at /frontend
 ADD . /frontend
 
 # Install app dependencies
@@ -13,9 +13,10 @@ RUN npm install
 
 # Make port 9000 available to the world outside this container
 EXPOSE 9000
+EXPOSE 8000
 
 # Define environment variable
-ENV ENDPOINT "http://api.openweathermap.org/data/2.5"
+ENV ENDPOINT="http://api.openweathermap.org/data/2.5"
 
-# Run app.py when the container launches
+# Run it
 CMD ["npm", "start"]
